fix: flexbox alignment on flex exercise 6

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,44 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer, .header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 21px;
+}
+
+.header {
+  padding: 8px;
+}
+
+.footer {
+  padding: 8px;
+  margin-bottom: 16px;
+  background-color: #eeee;
+}
+
+a {
+  text-decoration: none;
+  color: gray;
+}
+
+ul {
+  display: flex;
+  list-style-type: none;
+  gap: 21px;
+  padding: 0px 40px;
 }
 
 img {
@@ -16,6 +54,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
 }
 
 input {
